--- a/__site/assessment/index.html
+++ b/__site/assessment/index.html
@@ -35,6 +35,7 @@
       <li><a href="/desert/">Deseret</a></li>
       <li><a href="/sonora/">New Sonora</a></li>
       <li><a href="/pacific/">Pacifica</a></li>
+      <li><a href="/alter/">Alternatives</a></li>
     </ul>
   </div>
   <div id="main">
