--- a/__site/factor/index.html
+++ b/__site/factor/index.html
@@ -34,6 +34,7 @@
       <li><a href="/desert/">Deseret</a></li>
       <li><a href="/sonora/">New Sonora</a></li>
       <li><a href="/pacific/">Pacifica</a></li>
+      <li><a href="/alter/">Alternatives</a></li>
     </ul>
   </div>
   <div id="main">
@@ -525,12 +526,13 @@
 
 <p>Neither the current nor the historical electoral margins hold much promise of political stability.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
+<p>Besides the doubtful political prospects, all of Factoria&#39;s recent growth is due to international migration. It&#39;s ability to assimilate a more diverse population will be important socially, politically and economically. Factoria&#39;s economy is heavily reliant on the automotive industry, which is vulnerable to foreign competition.</p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 15, 2025.
+     Richard Careaga. Last modified: March 16, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
