--- a/__site/lonestar/index.html
+++ b/__site/lonestar/index.html
@@ -34,6 +34,7 @@
       <li><a href="/desert/">Deseret</a></li>
       <li><a href="/sonora/">New Sonora</a></li>
       <li><a href="/pacific/">Pacifica</a></li>
+      <li><a href="/alter/">Alternatives</a></li>
     </ul>
   </div>
   <div id="main">
@@ -431,7 +432,7 @@
 <p>Louisiana and Texas combined accounted for &#36;267.2 billion in energy export trade dollar value in 2024, representing 83.4&#37; of U.S. energy exports</p>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
 <p>Texas is a hub for IT and software development, with significant exports of tech-related services.Expertise in oil and gas exploration and production is a major export. Texas hosts corporations offering consulting, legal, and financial services internationally.</p>
-<p>Oklahoma&#39;s szservices related to oil and natural gas extraction are key exports. Oklahoma&#39;s aerospace industry supports international clients through maintenance, repair, and overhaul &#40;MRO&#41; services.</p>
+<p>Oklahoma&#39;s services related to oil and natural gas extraction are key exports. Oklahoma&#39;s aerospace industry supports international clients through maintenance, repair, and overhaul &#40;MRO&#41; services.</p>
 <p>Arkansas is home to Walmart, which has expertise in logistics services.</p>
 <p>Louisiana&#39;s ports handle a large volume of U.S. exports, providing critical logistics services. Louisiana has expertise in LNG terminal operations and energy distribution is exported globally.</p>
 <h3 id="productivity"><a href="#productivity" class="header-anchor">Productivity</a></h3>
@@ -488,13 +489,13 @@
 <p>Politcal polarization of The Lone Star Republic, as measured by the margin between votes for the two major party political nominees, was 14.53% in the 2024 election. Politcal polarization of The Lone Star Republic, as measured by the margin between votes for the two major party political nominees, was 2.15% over the elections from 1968-2020.</p>	 
  If the recent marked difference between the two parties reverts to the long-term mean, there appears to be a stable political majority for The Lone Star Republic.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
-<p></p>
+<p>Texas has robust natural growth combined with strong immigration. Even with immigration, Louisiana is losing population. Arkansas and Oklahoma both depend on immigration to maintain population levels. The regional economy is heavily dependent on oil and gas, which are vulnerable to both depletion and trends toward carbon-neutral energy sources. It does, however, have vast expanses of flat land with low agricultural productivity that is suitable for solar power. This will require, however, in the case of Texas electricity grid infrastructure improvements to connect to markets outside of Texas.	</p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 13, 2025.
+     Richard Careaga. Last modified: March 16, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
