--- a/__site/metro/index.html
+++ b/__site/metro/index.html
@@ -34,6 +34,7 @@
       <li><a href="/desert/">Deseret</a></li>
       <li><a href="/sonora/">New Sonora</a></li>
       <li><a href="/pacific/">Pacifica</a></li>
+      <li><a href="/alter/">Alternatives</a></li>
     </ul>
   </div>
   <div id="main">
@@ -514,13 +515,13 @@
 <p>Politcal polarization of Metropolis, as measured by the margin between votes for the two major party political nominees, was 18.24% in the 2024 election. Politcal polarization of Metropolis, as measured by the margin between votes for the two major party political nominees, was 15.54% over the elections from 1968-2020.</p>	 
  On both a current and historical basis, there appears to be a stable political majority for Metropolis.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
-<p></p>
+<p>Metropolis is experiencing high domestic emmigration. Positive natural growth makes up part of the difference, but international immigration is mainly responsible for growth. New York City will probably remain a major center of finance, even without a continent-wide currency union. The District of Columbia and Northern Virginia will experience major dislocation as the services provided to the former federal government will not be replaced in total by the needs of Metropolis. Some of the defence related establishments may find export markets.</p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 13, 2025.
+     Richard Careaga. Last modified: March 16, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
