--- a/__site/pacific/index.html
+++ b/__site/pacific/index.html
@@ -34,6 +34,7 @@
       <li><a href="/desert/">Deseret</a></li>
       <li><a href="/sonora/">New Sonora</a></li>
       <li><a href="/pacific/">Pacifica</a></li>
+      <li><a href="/alter/">Alternatives</a></li>
     </ul>
   </div>
   <div id="main">
@@ -462,15 +463,15 @@
 <p>Replicating the same unstable political dichotomy of the past decade is to be avoided. Taking the 2024 presidential vote as a proxy for political values, each nation should have a clear majority. </p>
 <p>
 <p>Politcal polarization of Pacifica, as measured by the margin between votes for the two major party political nominees, was 12.48% in the 2024 election. Politcal polarization of Pacifica, as measured by the margin between votes for the two major party political nominees, was 7.28% over the elections from 1968-2020.</p>	 
- Even should the recent marked difference between the two parties should revert to the long-term mean, there appears to be a stable political majority for Pacifica.</p>
+ Even should the recent marked difference between the two parties should revert to the long-term mean, there appears to be a stable political majority for Pacifica. It may be less vulnerable than other portions of the United States to climate change. Its well educated population and concentration of tech and other knowledge-based industries provide a firm foundation for continued economic success.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
-<p></p>
+<p>Pacifica, in common with others of the new nations, relies on international immigration for growth.</p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 13, 2025.
+     Richard Careaga. Last modified: March 16, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
