--- a/__site/sonora/index.html
+++ b/__site/sonora/index.html
@@ -34,6 +34,7 @@
       <li><a href="/desert/">Deseret</a></li>
       <li><a href="/sonora/">New Sonora</a></li>
       <li><a href="/pacific/">Pacifica</a></li>
+      <li><a href="/alter/">Alternatives</a></li>
     </ul>
   </div>
   <div id="main">
@@ -503,12 +504,14 @@
 <p>
 <p>Politcal polarization of New Sonora, as measured by the margin between votes for the two major party political nominees, was 15.84% in the 2024 election. Politcal polarization of New Sonora, as measured by the margin between votes for the two major party political nominees, was 3.04% over the elections from 1968-2020.</p>	 
  If the recent narrow difference between the two parties reverts to the long-term mean, there appears to be a stable political majority for New Sonora.</p>
+<h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
+<p>New Sonora as a whole has positive natural growth, mainly from California. Strong internation immigration accounts for most of the growth. Climate change may leave New Sonora with inadequate water supply for both urban and agricultural requirements. Extensive portions of desert may need to be devoted to solar electricity generation to provide the power for water desalination.</p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 13, 2025.
+     Richard Careaga. Last modified: March 16, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
