corrected prepath in config.md to deploy correctly

--- a/__site/concord/index.html
+++ b/__site/concord/index.html
@@ -4,11 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
-  <link rel="stylesheet" href="/css/franklin.css">
-<link rel="stylesheet" href="/css/tufte.css">
-<link rel="stylesheet" href="/css/latex.css">
-<link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
-<link rel="icon" href="/assets/favicon.png">
+  <link rel="stylesheet" href="/refounded/css/franklin.css">
+<link rel="stylesheet" href="/refounded/css/tufte.css">
+<link rel="stylesheet" href="/refounded/css/latex.css">
+<link rel="stylesheet" href="/refounded/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
+<link rel="icon" href="/refounded/assets/favicon.png">
 
    <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
@@ -22,19 +22,19 @@
 <div id="layout">
   <div id="menu">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/common/">Commonalities</a></li>
-      <li><a href="/concord/">Concordia</a></li>
-      <li><a href="/metro/">Metropolis</a></li>
-      <li><a href="/factor/">Factoria</a></li>
-      <li><a href="/lonestar/">The Lone Star Republic</a></li>
-      <li><a href="/dixie/">New Dixie</a></li>
-      <li><a href="/cumber/">Cumberland</a></li>
-      <li><a href="/heart/">Heartlandia</a></li>
-      <li><a href="/desert/">Deseret</a></li>
-      <li><a href="/sonora/">New Sonora</a></li>
-      <li><a href="/pacific/">Pacifica</a></li>
-      <li><a href="/alter/">Alternatives</a></li>
+      <li><a href="/refounded/">Home</a></li>
+      <li><a href="/refounded/common/">Commonalities</a></li>
+      <li><a href="/refounded/concord/">Concordia</a></li>
+      <li><a href="/refounded/metro/">Metropolis</a></li>
+      <li><a href="/refounded/factor/">Factoria</a></li>
+      <li><a href="/refounded/lonestar/">The Lone Star Republic</a></li>
+      <li><a href="/refounded/dixie/">New Dixie</a></li>
+      <li><a href="/refounded/cumber/">Cumberland</a></li>
+      <li><a href="/refounded/heart/">Heartlandia</a></li>
+      <li><a href="/refounded/desert/">Deseret</a></li>
+      <li><a href="/refounded/sonora/">New Sonora</a></li>
+      <li><a href="/refounded/pacific/">Pacifica</a></li>
+      <li><a href="/refounded/alter/">Alternatives</a></li>
     </ul>
   </div>
   <div id="main">
@@ -43,7 +43,7 @@
 
 <!-- Content appended here -->
 <div class="franklin-content"><h1 id="concordia"><a href="#concordia" class="header-anchor">Concordia</a></h1>
-<div class="marginnote"><img src="/img/concord.png" style="width: 100%; display: block;"></div>
+<div class="marginnote"><img src="/refounded/img/concord.png" style="width: 100%; display: block;"></div>
 <p>All of Concordia lies within 200 miles of Boston except for northeastern Maine, which is sparsely settled. It is bordered by Quebec, Canada on the north and by New Brunswick, Canada on the east. It borders New York on the west and south. Approximately 75&#37; of the region is forested.</p>
 
 <iframe 
@@ -93,7 +93,7 @@
 	
 
 <p>Its population is concentrated along the Northeast Corridor from Boston to New York. Massachusetts has a population size similar to Indiana and Tennessee. Connecticut falls between Utah and Oklahoma. Maine and New Hampshire are both comparable to Hawaii. Rhode Island has the approximate population of Delaware and Montana. Vermont has a larger population than Wyoming and a smaller population than the District of Columbia.</p>
-<p><img src="/img/concord_night.png" alt="Concordia at night" /></p>
+<p><img src="/refounded/img/concord_night.png" alt="Concordia at night" /></p>
 <p>The following table shows the population of Concordia in relation to the European Union member states.</p>
 
 <table class="tufte-table">
@@ -193,9 +193,9 @@
 	 
 
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
-<p><img src="/img/Concordia_Age_Pyramid.png" alt="Concordia regional age pyramid" /></p>
+<p><img src="/refounded/img/Concordia_Age_Pyramid.png" alt="Concordia regional age pyramid" /></p>
 <p>Compared to the United States as a whole, Concordia has a younger population, although that varies by state.</p>
-<p><img src="/img/concordia_state_ages.png" alt="Concordia state age pyramids" /></p>
+<p><img src="/refounded/img/concordia_state_ages.png" alt="Concordia state age pyramids" /></p>
 <p>The age distribution differences are reflected in the dependency ratios for the  Concordia states.</p>
 
 <table class="tufte-table">
