--- a/__site/src/Concordia_dependency_table/index.html
+++ b/__site/src/Concordia_dependency_table/index.html
@@ -1,28 +1,1 @@
-<table class="tufte-table">
-  <thead>
-    <tr class="tufte-table tr header headerLastRow">
-      <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State</th>
-      <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Connecticut</td>
-      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">52.88</td>
-    </tr>
-    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Massachusetts</td>
-      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">50.23</td>
-    </tr>
-    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Maine</td>
-      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">58.14</td>
-    </tr>
-    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">New Hampshire</td>
-      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">52.66</td>
-    </tr>
-    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Rhode Island</td>
-      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">51.07</td>
-    </tr>
-    <tr class="tufte-table tr"><td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Vermont</td>
-      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">55.07</td>
-    </tr>
-  </tbody>
-</table>
+<table class=tufte-table > <thead> <tr class="tufte-table tr header headerLastRow"> <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Connecticut <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">52.88 <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Massachusetts <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">50.23 <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Maine <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">58.14 <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">New Hampshire <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">52.66 <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Rhode Island <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">51.07 <tr class="tufte-table tr"><td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Vermont <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">55.07 </table>
