--- a/__site/sonora/index.html
+++ b/__site/sonora/index.html
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="https://technocrat.site/refounded/">Home</a></li>
+      <li><a href="https://technocrat.site/refounded/league/">Summary Table</a></li>
       <li><a href="https://technocrat.site/refounded/common/">Commonalities</a></li>
       <li><a href="https://technocrat.site/refounded/concord/">Concordia</a></li>
       <li><a href="https://technocrat.site/refounded/metro/">Metropolis</a></li>
@@ -89,7 +90,7 @@
 	
 
 <p>As a single state it would be the largest, just as its principal component, California, is already the largest. Arizona ranks between Massachusetts and Washington, while the remaining states all fall between New Hampshire and Iowa.</p>
-<p><img src="/refounded/img/sonora_at_night.png" alt="New Sonora at night" /></p>
+<p><img src="/img/sonora_at_night.png" alt="New Sonora at night" /></p>
 <p>The following table shows the population of New Sonora in relation to the European Union member states.</p>
 
 <table class="tufte-table">
@@ -189,9 +190,9 @@
 	 
 
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
-<p><img src="/refounded/img/New_Sonora_Age_Pyramid.png" alt="New Sonora regional age pyramid" /></p>
+<p><img src="/img/New_Sonora_Age_Pyramid.png" alt="New Sonora regional age pyramid" /></p>
 <p>Compared to the United States as a whole, New Sonora has a younger population, although that varies by state.</p>
-<p><img src="/refounded/img/New_Sonora_states_age_pyramids.png" alt="New Sonora state age pyramids" /></p>
+<p><img src="/img/New_Sonora_states_age_pyramids.png" alt="New Sonora state age pyramids" /></p>
 
 <table class="tufte-table">
   <thead>
