--- a/__site/404.html
+++ b/__site/404.html
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="https://technocrat.site/refounded/">Home</a></li>
+      <li><a href="https://technocrat.site/refounded/league/">Summary Table</a></li>
       <li><a href="https://technocrat.site/refounded/common/">Commonalities</a></li>
       <li><a href="https://technocrat.site/refounded/concord/">Concordia</a></li>
       <li><a href="https://technocrat.site/refounded/metro/">Metropolis</a></li>
@@ -62,7 +63,7 @@
   <br>
 
   <div style="margin-bottom: 300px; font-size: 24px">
-    <a href="/refounded/">Click here</a> to go back to the homepage.
+    <a href="/">Click here</a> to go back to the homepage.
   </div>
 
 </div>
