--- a/__site/dixie/index.html
+++ b/__site/dixie/index.html
@@ -23,6 +23,7 @@
   <div id="menu">
     <ul>
       <li><a href="https://technocrat.site/refounded/">Home</a></li>
+      <li><a href="https://technocrat.site/refounded/league/">Summary Table</a></li>
       <li><a href="https://technocrat.site/refounded/common/">Commonalities</a></li>
       <li><a href="https://technocrat.site/refounded/concord/">Concordia</a></li>
       <li><a href="https://technocrat.site/refounded/metro/">Metropolis</a></li>
